2008-02-23  Andras Varga

	Summary of changes for omnetpp-4.0 (2006..2008):

	* inifile syntax change: [Cmdenv] config entries became cmdenv-... ones

	* cmdenv-express-mode= now defaults to true

	* new inifile entry: cmdenv-interactive=. When false, Cmdenv will
	never read stdin, which is better suited for batch execution.

	* -c option and cmdenv-config-name= inifile entry for specifying the
	configuration name to run; specific runs for the configuration can
	be selected with existing -r option or cmdenv-runs-to-execute=.
	For example,  "-c Foo -r 1..5" does 5 runs from [Config Foo]
	in the ini file.

	* prints progress percentages "nn% completed" during simulation.
	It is used by the simulation launcher's progress bar in the IDE.
	The algorithm computes percentage both from sim-time-limit and
	cpu-time-limit, and prints the larger one.

	* for run iterations (-r option and cmdenv-runs-to-execute=), accept
	both ".." and "-" as range separator, i.e. both  "2..5" and "2-5" are
	valid

	* from now on, you need to specify "-u _cmdenv_lib" (gcc) or 
	"/include:_cmdenv_lib" (vc++) in addition to -lcmdenv (or cmdenv.lib) 
	on the linker command line. But: now you can have a program with both 
	Cmdenv and Tkenv in it.

	* out-of-directory build, and other Makefile changes

	* obsolete source heap.cc removed

	* SEE CHANGES FOR ENVIR TOO. (Envir is the common part of Cmdenv and 
	Tkenv).

2006-10-21  ------ omnetpp-3.3 released ------

2006-01-12  ------ omnetpp-3.2p1 released ------

2005-10-19  ------ omnetpp-3.2 released ------

2005-03-31  ------ omnetpp-3.1 released ------

2005-03-22  Andras Varga

	* cmdenv.cc/h: handling of -h option moved into TOmnetApp base class.

2005-03-02  Andras Varga

	* cmdenv.h/cc: makeOptionsEffective() merged into readPerRunOptions()

2005-01-10  Andras Varga

	* cmdenv.cc: factored out platform dependencies to include/platdep

2004-12-29  ------ omnetpp-3.0 released ------

2004-12-15  Andras Varga
